# approval-service

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: __init__.py  auth.py  config.py  database.py  enums.py  errors.py  events.py  logging_config.py  main.py  models.py  schemas.py  security.py  service.py
app/api/: routes_approvals.py
tests/: conftest.py  test_approvals_crud.py  test_auth.py  test_events_audit.py  test_health.py  test_idempotency.py  test_isolation.py  test_redaction.py  test_state_machine.py
